WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199358
REGRESSION(
r246963
) GTK's debug build is broken
https://bugs.webkit.org/show_bug.cgi?id=199358
Summary
REGRESSION(r246963) GTK's debug build is broken
Miguel Gomez
Reported
2019-07-01 05:15:24 PDT
The traits to use downcast are missing in AnimatedBackingStoreClient.
Attachments
Patch
(4.85 KB, patch)
2019-07-01 05:26 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Patch
(4.29 KB, patch)
2019-07-01 05:29 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Patch
(4.33 KB, patch)
2019-07-01 05:40 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Patch
(4.27 KB, patch)
2019-07-01 06:08 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2019-07-01 05:26:48 PDT
Created
attachment 373220
[details]
Patch
Carlos Garcia Campos
Comment 2
2019-07-01 05:29:10 PDT
Comment on
attachment 373220
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373220&action=review
> Source/WebCore/ChangeLog:28 > +2019-07-01 Miguel Gomez <
magomez@igalia.com
> > + > + REGRESSION(
r246963
) GTK's debug build is broken > +
https://bugs.webkit.org/show_bug.cgi?id=199358
> + > + Reviewed by NOBODY (OOPS!). > + > + Add the traits to be able to downcast AnimatedBackingStoreClient. > + > + * platform/graphics/nicosia/NicosiaAnimatedBackingStoreClient.h: > + (Nicosia::AnimatedBackingStoreClient::AnimatedBackingStoreClient): > + (Nicosia::AnimatedBackingStoreClient::type const): > + * platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
double changelog
> Source/WebCore/platform/graphics/nicosia/NicosiaAnimatedBackingStoreClient.h:45 > + enum ClientType { > + Coordinated > + };
Use an enum class
> Source/WebCore/platform/graphics/nicosia/NicosiaAnimatedBackingStoreClient.h:47 > + AnimatedBackingStoreClient(ClientType type)
explicit
Miguel Gomez
Comment 3
2019-07-01 05:29:29 PDT
Created
attachment 373221
[details]
Patch
Michael Catanzaro
Comment 4
2019-07-01 05:31:27 PDT
Comment on
attachment 373221
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373221&action=review
> Source/WebCore/platform/graphics/nicosia/NicosiaAnimatedBackingStoreClient.h:47 > + AnimatedBackingStoreClient(ClientType type)
explicit
Miguel Gomez
Comment 5
2019-07-01 05:40:26 PDT
Created
attachment 373222
[details]
Patch
Carlos Garcia Campos
Comment 6
2019-07-01 05:48:26 PDT
Comment on
attachment 373222
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373222&action=review
> Source/WebCore/platform/graphics/nicosia/NicosiaAnimatedBackingStoreClient.h:43 > + enum class ClientType {
Now that this is an emu class Client is Redundant here, use just Type
> Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:1307 > +SPECIALIZE_TYPE_TRAITS_ANIMATEDBACKINGSTORECLIENT(WebCore::CoordinatedAnimatedBackingStoreClient, type() == Nicosia::AnimatedBackingStoreClient::ClientType::Coordinated)
Client::Client <- this is what I mean
Miguel Gomez
Comment 7
2019-07-01 06:08:54 PDT
Created
attachment 373227
[details]
Patch
WebKit Commit Bot
Comment 8
2019-07-01 06:42:30 PDT
Comment on
attachment 373227
[details]
Patch Clearing flags on attachment: 373227 Committed
r247007
: <
https://trac.webkit.org/changeset/247007
>
WebKit Commit Bot
Comment 9
2019-07-01 06:42:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug