REGRESSION(r246963) GTK's debug build is broken https://bugs.webkit.org/show_bug.cgi?id=199358

Reviewed by Michael Catanzaro.

Add traits to be able to downcast AnimatedBackingStoreClient.

* platform/graphics/nicosia/NicosiaAnimatedBackingStoreClient.h:
(Nicosia::AnimatedBackingStoreClient::AnimatedBackingStoreClient):
(Nicosia::AnimatedBackingStoreClient::type const):
* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::updateContentBuffers):


Canonical link: https://commits.webkit.org/213293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247007 268f45cc-cd09-0410-ab3c-d52691b4dbfc